--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Sistema de compra y venta desarrollado con Angular 19, Tailwind y PrimeNG">
+  <meta name="description" content="Sistema de compra y venta desarrollado con Angular 19 y PrimeNG">
   <meta name="theme-color" content="#2563eb">
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
