--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="./output.css" rel="stylesheet">
 </head>
 <body class="bg-gray-50 font-[Inter] min-h-screen mat-typography">
   <!-- Contenedor raíz de Angular -->
